Личные сообщения - диалог с пользователем.

--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -317,9 +317,10 @@ p
 .small
     font-size: em(12px) !important
     margin-bottom: 12px
-.small-description
+.small-description, .small-text
     font-size: em(12px) !important
     color: $gray-color
+.small-description
     margin-bottom: 20px
 a.small-description
     &:hover
