--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -526,7 +526,7 @@ section
 label
     font-family: $title-font
     float: left
-input, textarea, .input
+input, textarea, .input, .textarea
     display: inline-block
     line-height: 36px
     background: #e9e9e9 // #e1e1e1
@@ -538,6 +538,8 @@ input, textarea, .input
     max-width: 100%
     &:hover, &:focus
         background: #ececec
+.textarea
+    min-height: 38px
 input[type="checkbox"]
     line-height: 1
     height: 20px
