--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -267,6 +267,20 @@ body
                 a
                     background: #f4f4f4
                     margin-bottom: 20px
+.sidebar .widget.widget-users
+    .horisontal
+        .item.user
+            width: auto
+            border: none
+            padding-top: 0
+            .user-avatar
+                width: auto
+                min-width: inherit
+                padding: 0
+            .user
+                display: inline-block
+                width: 100%
+
 .sidebar .widget.widget-users, .blog .users-list, .users-list
     .item
         display: table
