--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -401,6 +401,8 @@ svg
     margin-left: 50px
 .m-r-5
     margin-right: 5px
+.m-r-10
+    margin-right: 10px
 .m-r-20
     margin-right: 20px
 .m-r-25
