Кнопки входа через социальные сети.

--- a/app/header.sass
+++ b/app/header.sass
@@ -199,6 +199,17 @@
     .sign-in-container
         a.dropdown-button
             padding: 0
+        .sign-in-social
+            margin: 10px 5px 0
+            a.button
+                margin-right: 11px
+                padding: 9px 0
+                width: 46px
+                height: 46px
+                i, .fa
+                    font-size: 24px
+                &:last-child
+                    margin-right: 0
 
 // End HeaderWidger
 
