--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -31,8 +31,19 @@ body input:required:valid,
 body textarea:required:valid
 	color: $gray-color
 
+html, body
+    height: 100%
 body, #panel
     background-color: #e1e0e4
+
+#panel
+    display: flex
+    flex-direction: column
+    height: 100%
+    > .container-fluid
+        flex: 1 0 auto
+    footer
+        flex: 0 0 auto
 
 body
 	font-family: $default-font
