Вопрос (не доделан). Поиск. Исправления стилей (подправить отступы на блоге).

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -301,6 +301,11 @@
                 .page-info
                     .login
                         display: none
+            &.question
+                .delimiter
+                    .link
+                        a
+                            left: -50%
     // Comments
     .comment
         .comment-left-side
@@ -434,7 +439,7 @@
                 > div
                     float: left
                     margin-bottom: 5px
-            .item-info
+            .delimiter + .item-info
                 margin-top: 25px
 
     /* USER PROFILE */
