--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1174,7 +1174,7 @@ footer
                 color: $dark-gray-color
                 font-weight: bold
                 position: relative
-                top: 10px
+                top: 0
                 margin-left: 15px
                 &.online
                     color: $green-color
@@ -1269,7 +1269,7 @@ footer
     .item
         float: left
         display: inline-block
-        width: 10%
+        width: 100px
         padding: 0 10px
         margin-bottom: 20px
         .small-description
